# typed-lua

./: .clang-format  CMakeLists.txt  README.md
examples/: require.cpp  simple.cpp  simple.lua  testsimple.lua
src/: compile_error.hpp  lexer.l  libs.hpp  libs_basic.cpp  libs_io.cpp  libs_math.cpp  libs_package.cpp  libs_string.cpp  libs_table.cpp  loader.cpp  loader.hpp  location.hpp  main.cpp  node.cpp  node.hpp  parser.y  require.cpp  require.hpp  scope.hpp  type.cpp  type.hpp  typedlua_compiler.cpp  typedlua_compiler.hpp
test/: assign-test.lua  bind.lua  binops.lua  function-call.lua  function-type.lua  game-of-life.lua  generic-function.lua  generic-interface.lua  interface.lua  lib_basic.lua  lib_math.lua  lib_string.lua  lib_table.lua  literal-type-deduction.lua  literal-types.lua  local-deduce.lua  namedecl-test.lua  narrowing-assign.lua  product-types.lua  require.lua  return-deduction.lua  scope-test.lua  string.lua  tables.lua  test.lua  tuple.lua  unaryops.lua
